Temporary fix for <nav> spacing issues git status

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -76,6 +82,7 @@ header {
 
 #navigation li {
     display: inline;
+    padding: 5.25em;
 }
 
 .title {
